kotlin-parser/src/test/semlang/validatorTests/fail/booleanLiteral3.sem
function myStuff.myFunction(): Boolean {
  return Boolean."yes"
}
